# quackcode-streamlit-duckdb

./: README.md  app.py  dynamic_content_loop.py  dynamic_layout.py  dynamic_render.py  gpt_duck.py  hello_ollama.py  pyproject.toml
.devcontainer/: devcontainer.json
