[tool.poetry]
name = "streamlit-duckdb"
version = "0.1.0"
description = ""
authors = ["mehd-io <mehdi@mehd.io>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
streamlit = "^1.29.0"
matplotlib = "^3.8.2"
duckdb = "^0.9.2"
ollama = "^0.1.6"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
